--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
   <title>Fashion House</title>
   <link rel="stylesheet" href="./css/style.css" />
   <!-- Latest compiled and minified CSS -->
-  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" /> -->
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+
+
   <!-- google Montserrat  font  -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -21,17 +22,22 @@
 <body>
   <header></header>
   <main class="container">
+    <!-- ------input field------------ -->
     <div class="input-group m-5 w-75">
       <input type="text" id="input-field" class="form-control" placeholder="Search Products"
         aria-label="Recipient's username" aria-describedby="button-addon2">
       <button class="btn btn-outline-primary" type="button" id="search-btn" onclick="loadProducts()">Search</button>
     </div>
+
+    <!-- products-------- -->
     <div class="row">
       <div class="col-md-9 col-lg-9 col-sm-7">
-        <div id="all-products" class="">
+        <div id="all-products">
 
         </div>
       </div>
+      <!-- My-carts------------- -->
+
       <div class="col-md-3 col-lg-3 col-sm-5 cart-main">
         <div class="cart" id="my-cart">
           <table class="table">
