--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <header></header>
   <main class="container">
-    <!-- ------input field------------ -->
+    <!-- ------input field---------- -->
     <div class="input-group m-5 w-75">
       <input type="text" id="input-field" class="form-control" placeholder="Search Products"
         aria-label="Recipient's username" aria-describedby="button-addon2">
